Swagger carreado por franco funcional.
